# curs4_job_parser

./: README.md  main.py  pyproject.toml
