[tool.poetry]
name = "curs4-job-parser"
version = "0.1.0"
description = ""
authors = ["gramm23 <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "curs4_job_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
